EEP-HIVE-1569: Add conditioned Java17 and Java21 auto-configuration as a part of configure.sh behavior for all EEPs